# clin-omics

./: README.md  pyproject.toml
scripts/: run_bulk_rnaseq_basic.sh  run_bulk_rnaseq_basic_from_h5.sh  run_bulk_rnaseq_graph.sh  run_bulk_rnaseq_graph_from_h5.sh  run_plot_embedding_from_h5.sh  run_plot_obs_field_from_h5.sh
src/clin_omics/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  typing.py
src/clin_omics/analysis/: __init__.py  clustering.py  embeddings.py  factorization.py  qc.py
src/clin_omics/curation/: __init__.py  clinical.py  merge.py  omics.py
src/clin_omics/dataset/: __init__.py  build.py  model.py  provenance.py  validate.py
src/clin_omics/export/: __init__.py  anndata.py  tables.py
src/clin_omics/io/: __init__.py  readers.py  writers.py
src/clin_omics/ml/: __init__.py  classification.py  evaluate.py  regression.py  splits.py
src/clin_omics/preprocess/: __init__.py  base.py  bulk_rnaseq.py  filtering.py  pipeline.py  scaling.py  transform.py
src/clin_omics/schema/: __init__.py  dataset.py  ids.py  tables.py
src/clin_omics/utils/: __init__.py
tests/: test_analysis.py  test_build_dataset.py  test_bulk_rnaseq_basic_flow.py  test_bulk_rnaseq_basic_from_h5_flow.py  test_bulk_rnaseq_graph_flow.py  test_bulk_rnaseq_graph_from_h5_flow.py  test_cli.py  test_curation.py  test_dataset.py  test_export.py  test_ml.py  test_obs_field_plot.py  test_package_import.py  test_plot_embedding_from_h5_flow.py  test_preprocess.py  test_schema.py  test_smoke_script.py  test_visualization.py  test_visualization_evaluation.py
(+16 files in other folders)
